--- a/src/components/Modal/DefaultModal/styles.module.css
+++ b/src/components/Modal/DefaultModal/styles.module.css
@@ -17,7 +17,7 @@
   gap: 1rem;
   position: relative;
   max-width: 900px;
-  max-height: 700px;
+  max-height: 800px;
   background: var(--bg-surface);
   border-radius: 0.8rem;
   padding: 2rem;
